--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc && http-server",
-    "build": "tsc"
+    "build": "tsc",
+    "postbuild": "cp dist/service-worker.js service-worker.js"
   },
   "keywords": [],
   "author": "",
