--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc && http-server",
-    "build": "tsc",
-    "postbuild": "cp dist/service-worker.js service-worker.js"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
